--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "http-server -p 8078 -c-1 --cors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Felicity Graham",
